--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bot":"node ./index.js"
   },
   "author": "Lucario",
   "license": "ISC",
   "dependencies": {
     "socket.io": "^2.0.0",
     "express": "^4.15.4"
-  }
+  },
+  "engines":{
+		"node": "7.6.0"
+	}
 }
