--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "bot":"node ./index.js"
+    "web":"node ./index.js"
   },
   "author": "Lucario",
   "license": "ISC",
